Bug 139618 - FILEOPEN: PPTX: Wordart with Gradient Fill is imported as Solid Fill
Summary: FILEOPEN: PPTX: Wordart with Gradient Fill is imported as Solid Fill
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords:
: 146358 (view as bug list)
Depends on:
Blocks: OOXML-WordArt
  Show dependency treegraph
 
Reported: 2021-01-14 19:49 UTC by Luke
Modified: 2023-05-15 14:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example pptx of missing gradient format (34.89 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-01-14 19:49 UTC, Luke
Details
PowerPointvsImpress (163.35 KB, image/png)
2021-01-14 19:57 UTC, Luke
Details
ODF showing how file should work (14.04 KB, application/vnd.oasis.opendocument.presentation)
2021-01-14 20:00 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2021-01-14 19:49:51 UTC
Created attachment 168887 [details]
Example pptx of missing gradient format

The is a follow up to Bug 104217. We correctly import this shape as FontWork but do not apply the gradient.

Steps to reproduce:
1. Open ShapeTextGradient.pptx in Powerpoint
2. Open in Impress

Expected results:

1. The text has a white to blue gradient

Actual Results:

The text is solid filled black
Comment 1 Luke 2021-01-14 19:57:21 UTC
Created attachment 168888 [details]
PowerPointvsImpress
Comment 2 Luke 2021-01-14 20:00:08 UTC
Created attachment 168889 [details]
ODF showing how file should work

Example ODF showing that Font Work supports gradients.
Comment 3 Xisco Faulí 2021-01-15 10:34:23 UTC
Reproduced in

Version: 7.2.0.0.alpha0+
Build ID: 5adc93a9a9426ef79054751be2904896f787a8a2
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 stragu 2021-12-22 06:23:00 UTC
*** Bug 146358 has been marked as a duplicate of this bug. ***
Comment 5 stragu 2021-12-22 06:25:59 UTC
Reproducible in:

Version: 7.0.6.2
Build ID: 00(Build:2)
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Ubuntu package version: 1:7.0.6-0ubuntu0.18.04.1_lo1
Calc: threaded

Version: 7.1.8.1 / LibreOffice Community
Build ID: e1f30c802c3269a1d052614453f260e49458c82c
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.3.0.0.beta1 / LibreOffice Community
Build ID: 436f14c25ec1847646b953cf13d0db4f7ca3be57
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 17a4f4d5e4d49189b43e748271d2d4fa330eef9b
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Attachment 177077 [details] shows OnlyOffice supporting this type of gradient in PPTX.
Comment 6 Regina Henschel 2023-03-11 16:09:46 UTC
Gradient in MS Office and LO are incompatible in many ways. But we should import it as a gradient near to that in MS Office. Currently the import has only "solid". Bitmap fill and pattern fill are missing too.
Comment 7 Commit Notification 2023-03-14 07:40:15 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/260735ff98631b94ae8737cf1cead3e20bade618

tdf#139618 Add WordArt fill types in pptx import

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Regina Henschel 2023-03-14 09:33:12 UTC
Not only gradients but bitmap fill and transparency works now too. When you test gradients please keep in mind, that gradients in MS Office and LibreOffice are in many aspects principle incompatible and problems you know from fill of shapes exist for WordArt in the same way.
Comment 9 Xisco Faulí 2023-03-14 11:18:04 UTC
Looks fantastic in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0483b0a4bbd41f026a53ff35ab3162b57bee1a91
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (es_ES.UTF-8); UI: en-US
Calc: threaded

@Regina, thanks for fixing this issue!!